# cluster

./: .gitignore  CMakeLists.txt  classifier.cpp  classifier.h  install_linux_dep.sh  linux.sh  main.cpp  parser.cpp  parser.h  specs.txt  todo
input/: test2
unittests/: CMakeLists.txt  main.cpp
